added submit form, changed colors

--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
             The Front Page of Summit
         </div>
 
-        <div id="linksList">
+        <div id="linksList"></div>
+
+        <div id="formContainer">
+            <form>
+                <input id='newLinkText' type="text" placeholder='Enter Text Here'>
+                <input id='newLinkURL' type="text" placeholder='Enter URL Here'>
+                <button type='button' id="submitNewLink">Submit Link</button>
+            </form>
         </div>
-
-
 
     </body>
 
